--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,7 +18,7 @@ linters:
     - nilnil
     - noctx
     - prealloc
-    - revive
+    # - revive
     # - rowserrcheck
     - thelper
     - tparallel
